Fix color contrast issue on book menu h2 links
https://github.com/unlcms/project-herbie/pull/499

--- a/css/menu-block.css
+++ b/css/menu-block.css
@@ -5,8 +5,12 @@
  */
 .block-menu-block .is-active {background-color: #e7f0f0;}
 
-.block-menu-block a:hover {cursor: pointer;}
 .block-menu-block h2 {padding-left: 1.75rem; padding-right: 1.75rem;}
+
+.block-menu-block h2 a:link,
+.block-menu-block h2 a:hover,
+.block-menu-block h2 a:active,
+.block-menu-block h2 a:visited {color: #fefdfa !important;}
 
 .block-menu-block ul a {background-color: #ebebea; color: #242423; margin-bottom: 1px; padding-bottom: .5625em; padding-right: 1.75rem; padding-top: .5625em;}
 .block-menu-block ul a:hover {color: #9e0900;}
